# map-contracts

./: .gitignore  README.md
lightclients/: README.md
lightclients/bsc/: README.md  env-example.txt  hardhat.config.ts  package-lock.json  package.json
lightclients/bsc/contracts/: DLightNode.sol  LightNode.sol  LightNodeProxy.sol  LightNodeV2.sol  MPTVerify.sol
lightclients/btc/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
lightclients/bttc/: README.md  env-example.txt  hardhat.config.ts  package-lock.json  package.json
lightclients/conflux/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
lightclients/eth2/: README.md  env-example.txt  hardhat.config.ts  package-lock.json  package.json
lightclients/klaytn/: .env-example.txt  .env.example  README.md  hardhat.config.js  package-lock.json  package.json
lightclients/matic/: README.md  env-example.txt  hardhat.config.ts  package-lock.json  package.json
lightclients/miyou/: README.md  hardhat.config.ts  package-lock.json  package.json
lightclients/near/: .env-example.txt  README.md  env-example.txt  hardhat.config.js  package-lock.json  package.json
lightclients/oracle/: .gitignore  README.md  env-example.txt  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
lightclients/platon/: env-example.txt  hardhat.config.ts  package-lock.json  package.json
mapclients/: README.md
mapclients/eth/: .env-example.txt  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
mapclients/near/: Cargo.toml  README.md
mapclients/near/contracts/: Cargo.toml
mapclients/near/contracts/src/: crypto.rs  hash.rs  lib.rs  traits.rs
mapclients/near/contracts/src/serialization/: rlp.rs
mapclients/near/contracts/src/types/: errors.rs  header.rs  istanbul.rs  proof.rs
mapclients/near/map-bn/: Cargo.toml
mapclients/near/map-bn/src/: arith.rs  lib.rs
mapclients/near/map-bn/src/fields/: fp.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs  tests.rs
mapclients/near/map-bn/src/groups/: mod.rs  tests.rs
mapclients/near/map-bn128/: Cargo.toml
mapclients/near/map-bn128/src/: alt_bn128.rs  lib.rs
mapclients/near/map-client-factory/: Cargo.toml
mapclients/near/map-client-factory/src/: lib.rs
mapclients/near/scripts/: build.sh  config.sh  deploy.sh  init_args_client.json  test_deploy.sh
mapclients/near/src/: crypto.rs  istanbul.rs  lib.rs  macros.rs  traits.rs
mapclients/near/src/serialization/: bytes.rs  mod.rs  rlp.rs
mapclients/near/src/types/: errors.rs  header.rs  istanbul.rs  mod.rs  proof.rs
mapclients/near/tests/: main.rs
mapclients/near/tests/data/: header.json  headers.json  init_value.json  proof.json
mapclients/zkLightClient/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
mcs/evm/: README.md  hardhat.config.js  package-lock.json  package.json
mcs/evm/deploy/: WEth.js  (+17 more)
mcs/evmv2/: README.md  hardhat.config.js  package-lock.json  package.json
mcs/near/: Cargo.toml  README.md
mcs/near/admin-controlled/: Cargo.toml
mcs/near/admin-controlled/src/: lib.rs  macros.rs
mcs/near/eth-types/: Cargo.toml
mcs/near/eth-types/src/: lib.rs
mcs/near/map-cross-chain-service/: Cargo.toml
mcs/near/map-cross-chain-service/src/: bytes.rs  event.rs  lib.rs  management.rs  map_transfer_out_event.rs  migrate.rs  prover.rs  swap.rs  token_receiver.rs  tokens.rs
mcs/near/map-ominichain-service/: Cargo.toml
mcs/near/map-ominichain-service/src/: bytes.rs  event.rs  lib.rs  management.rs  prover.rs  swap.rs  token_receiver.rs  tokens.rs  traits.rs
mcs/near/mcs-factory/: Cargo.toml
mcs/near/mcs-factory/src/: lib.rs
mcs/near/mcs-token/: Cargo.toml
mcs/near/mcs-token/src/: lib.rs
mcs/near/mock-map-client/: Cargo.toml
mcs/near/mock-map-client/src/: lib.rs  macros.rs  traits.rs
mcs/near/mock-map-client/src/serialization/: bytes.rs
mcs/near/mos-factory/: Cargo.toml
mcs/near/mos-factory/src/: lib.rs
mcs/near/mos-token/src/: lib.rs
mcs/near/multisig/src/: lib.rs
mcs/near/near-lake-s3/: Cargo.toml
mcs/near/near-lake-s3/src/: .env.example  config.rs  main.rs
mcs/near/near-lake-s3/src/indexer/: stream.rs
mcs/near/near-lake-s3/src/pusher/: redis.rs
mcs/near/scripts/: build.sh  config.sh  deploy.sh  manage_factory.sh  manage_ft_token.sh  manage_mcs.sh  manage_mcs_token.sh  manage_multisig.sh  manage_native_token.sh  test.sh
mcs/near/tests/: deploy_mcs.sh  main.rs  testnet.sh
mcs/near/tests/data/: init_args_client.json  init_value.json  swap_in_ft_token.json  transfer_in_ft_token.json  transfer_in_native.json  transfer_in_token.json
mos/evm/: hardhat.config.js  package-lock.json
mos/evmv2/: .env-example.txt  README.md  hardhat.config.js  package-lock.json
mos/near/: README.md
mos/near/map-cross-chain-service/: Cargo.toml
mos/near/map-cross-chain-service/src/: bytes.rs  lib.rs
mos_sample/: README.md  hardhat.config.js  package-lock.json  package.json
mos_sample/contracts/: MAPOmnichainServiceRelayV2.sol  MAPOmnichainServiceV2.sol  MOS.sol  MOSRelay.sol
mos_sample/test/: MOSSMTest.js  MOSSRelayTest.js  mosData.js  mosRelayData.js
multisig/: Cargo.toml
multisig/multisig-factory/: Cargo.toml
multisig/scripts/: build.sh  config.sh  manage_multisig.sh
protocol/: .env-example.txt  .env.example  README.md  hardhat.config.js  package-lock.json  package.json
protocol/abi/: ILightClientManager.json  ILightNode.json  LightClientManager.json  MaintainerManager.json  Role.json
protocol/contracts/: DeployFactory.sol  LightClientManager.sol  LightClientManagerProxy.sol  LogDecoder.sol  MPTVerify.sol  MaintainerManager.sol  MaintainerManagerProxy.sol
protocol/deploy/: DeployFactory.js  LightClientManager.js  LightClientManagerSet.js  LightClientManagerUp.js  MPTVerify.js  MaintainerManager.js  MaintainerManagerSet.js  MaintainerManagerUp.js
protocol/tasks/: LightClientRegister.js  MaintainerWhileListSet.js  changeOwner.js  clientGetRange.js  clientRegister.js  deployMpt.js  getDeployAddress.js  index.js
protocol/test/: TestMaintainerManager.js
(+652 files in other folders)
