[package]
name = "map-light-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-sys = "0.2.0"
uint = { version = "0.8.3", default-features = false }
hex = { version = "0.4", default-features = false}
rlp = { version = "0.4.6", default-features = false, features = ["std"] }
num-bigint = { version = "0.4", default-features = false }
num = { version = "0.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true