[package]
name = "near"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
anyhow = "1.0"
near-sdk = "4.0.0"
#near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
#near-units = "*"
serde_json = "1.0"
tokio = { version = "1.18.2", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs", rev = "810c21032ef77b845ff507383e029d7d38586a2f" }
map-light-client = { path = "contracts"}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "contracts",
    "map-bn128",
    "map-bn"
]
