[package]
name = "near"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
anyhow = "1.0"
near-sdk = "4.0.0"
near-units = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs", rev = "810c21032ef77b845ff507383e029d7d38586a2f" }
map-light-client = { path = "../../mapclients/near/contracts"}
mos = { path = "map-ominichain-service" }
hex = "0.4.2"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "map-ominichain-service",
    "mos-token",
    "admin-controlled",
    "mos-factory",
    "mock-map-client"
]
