[package]
name = "map-bn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.borsh]
version = "0.9"
optional = true
default-features = false

[dependencies.byteorder]
version = "1.0"
features = ["i128"]
default-features = false

[dependencies.crunchy]
version = "0.2.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

#[dependencies.rand]
#version = "0.8.3"
#default-features = false

[dependencies.rustc-hex]
version = "2"
default-features = false
#[dev-dependencies.rand]
#version = "0.8.3"

[dev-dependencies.seq-macro]
version = "0.1.5"

[features]
default = ["borsh", "std"]
std = ["borsh/std"]

