[package]
name = "near-lake-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
#tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
dotenv = "0.15.0"
anyhow = "1.0"
once_cell = { version = "^1" }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
redis = {version = "0.21.5", features = ["connection-manager", "tokio-comp"]}

near-lake-framework = "0.5.0"